# pygame-pgfiles

./: .gitignore  README.md
pygame-pgx/: pyproject.toml
pygame-pgx/pgx/: __main__.py  api.py  exceptions.py  parsemodule.py  parseval.py  run.py
pygame-pgx/pgx/api/: __init__.py  annotations.py  app.py  element.py  scriptctx.py
pygame-pgx/pygame_pgx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
testproj/: test.pgx
testproj/embeds/: box.pgx
testproj/scripts/: main.py
tests/testproj/: test.pgx
tests/testproj/embeds/: box.pgx
tests/testproj/scripts/: main.py
